@@ -1,5 +1,7 @@
 2011-05-25  Donal K. Fellows  <dkf@users.sf.net>
 
+	* generic/tclOO.h (TCLOO_VERSION): Bump version.
+
 	IMPLEMENTATION OF TIP#381.
 
 	* doc/next.n, doc/ooInfo.n, doc/self.n, generic/tclOO.c,
